--- a/router3/graphViz/SpindleVFDWiring.dox
+++ b/router3/graphViz/SpindleVFDWiring.dox
@@ -1,5 +1,5 @@
 /*!
-    \file SpindleWiring.dox
+    \file SpindleVFDWiring.dox
     \addtogroup SpindleVFDWiring
 
     \brief This file illustrates the wiring for the Commander SK using the Gecko G540 and Mesa boards for my router spindle.
@@ -10,52 +10,54 @@
             rankdir="LR"
             label="Router Spindle Wiring Connections."
 
-            subgraph cluster_DB25{
-                label="G540 DB25 cable"
-                DB25 [shape="box" label=<
-                                <TABLE CELLBORDER="0" BORDER="0">
-                                    <TR><TD ALIGN="RIGHT" port="i10"> 10 INPUT 1</TD></TR>
-                                    <TR><TD ALIGN="RIGHT" port="i11"> 11 INPUT 2</TD></TR>
-                                    <TR><TD ALIGN="RIGHT" port="i12"> 12 INPUT 3</TD></TR>
-                                    <TR><TD ALIGN="RIGHT" port="i13"> 13 INPUT 4</TD></TR>
- 
-                                    <TR><TD ALIGN="LEFT" port="o1"> 1 OUTPUT 2</TD></TR> 
-                                    <TR><TD ALIGN="LEFT" port="o2"> 2 X-AXIS STEP</TD></TR> 
-                                    <TR><TD ALIGN="LEFT" port="o3"> 3 X-AXIS DIRECTION</TD></TR> 
-                                    <TR><TD ALIGN="LEFT" port="o4"> 4 Y-AXIS STEP</TD></TR> 
-                                    <TR><TD ALIGN="LEFT" port="o5"> 5 Y-AXIS DIRECTION</TD></TR> 
-                                    <TR><TD ALIGN="LEFT" port="o6"> 6 Z-AXIS STEP</TD></TR> 
-                                    <TR><TD ALIGN="LEFT" port="o7"> 7 Z-AXIS DIRECTION</TD></TR> 
-                                    <TR><TD ALIGN="LEFT" port="o8"> 8 A-AXIS STEP</TD></TR> 
-                                    <TR><TD ALIGN="LEFT" port="o9"> 9 A-AXIS DIRECTION</TD></TR> 
-                                    <TR><TD ALIGN="LEFT" port="o14"> 14 VFD PWM</TD></TR> 
-                                    <TR><TD ALIGN="LEFT" port="o17"> 17 OUTPUT 1</TD></TR> 
-
-                                    <TR><TD ALIGN="RIGHT" port="i15"> 15 FAULT</TD></TR>
-                                </TABLE>
-                >]
+            subgraph cluster_G540 {
+                label="G540"
+                subgraph cluster_DB25{
+                    label="DB25"
+                    DB25 [shape="box" label=<
+                                    <TABLE CELLBORDER="0" BORDER="0">
+                                        <TR><TD ALIGN="RIGHT" port="i10"> 10 INPUT 1</TD></TR>
+                                        <TR><TD ALIGN="RIGHT" port="i11"> 11 INPUT 2</TD></TR>
+                                        <TR><TD ALIGN="RIGHT" port="i12"> 12 INPUT 3</TD></TR>
+                                        <TR><TD ALIGN="RIGHT" port="i13"> 13 INPUT 4</TD></TR>
+     
+                                        <TR><TD ALIGN="LEFT" port="o1"> 1 OUTPUT 2</TD></TR> 
+                                        <TR><TD ALIGN="LEFT" port="o2"> 2 X-AXIS STEP</TD></TR> 
+                                        <TR><TD ALIGN="LEFT" port="o3"> 3 X-AXIS DIRECTION</TD></TR> 
+                                        <TR><TD ALIGN="LEFT" port="o4"> 4 Y-AXIS STEP</TD></TR> 
+                                        <TR><TD ALIGN="LEFT" port="o5"> 5 Y-AXIS DIRECTION</TD></TR> 
+                                        <TR><TD ALIGN="LEFT" port="o6"> 6 Z-AXIS STEP</TD></TR> 
+                                        <TR><TD ALIGN="LEFT" port="o7"> 7 Z-AXIS DIRECTION</TD></TR> 
+                                        <TR><TD ALIGN="LEFT" port="o8"> 8 A-AXIS STEP</TD></TR> 
+                                        <TR><TD ALIGN="LEFT" port="o9"> 9 A-AXIS DIRECTION</TD></TR> 
+                                        <TR><TD ALIGN="LEFT" port="o14"> 14 VFD PWM</TD></TR> 
+                                        <TR><TD ALIGN="LEFT" port="o17"> 17 OUTPUT 1</TD></TR> 
+    
+                                        <TR><TD ALIGN="RIGHT" port="i15"> 15 FAULT</TD></TR>
+                                    </TABLE>
+                    >]
+                }
+                subgraph cluster_terminals{
+                    label="screw terminals"
+                    terminals [shape="box" label=<
+                                    <TABLE CELLBORDER="0" BORDER="0">
+                                        <TR><TD ALIGN="LEFT" port="p1"> 1 INPUT 1 (DB25 PIN 10)</TD></TR> 
+                                        <TR><TD ALIGN="LEFT" port="p2"> 2 INPUT 2 (DB25 PIN 11)</TD></TR> 
+                                        <TR><TD ALIGN="LEFT" port="p3"> 3 INPUT 3 (DB25 PIN 12)</TD></TR> 
+                                        <TR><TD ALIGN="LEFT" port="p4"> 4 INPUT 4 (DB25 PIN 13)</TD></TR> 
+                                        <TR><TD ALIGN="LEFT" port="p5"> 5 OUTPUT 1 (DB25 PIN 17)</TD></TR> 
+                                        <TR><TD ALIGN="LEFT" port="p6"> 6 OUTPUT 2 (DB25 PIN 1)</TD></TR> 
+                                        <TR><TD ALIGN="LEFT" port="p7"> 7 VFD GROUND</TD></TR> 
+                                        <TR><TD ALIGN="LEFT" port="p8"> 8 VFD OUTPUT</TD></TR> 
+                                        <TR><TD ALIGN="LEFT" port="p9"> 9 VFD VCC</TD></TR> 
+                                        <TR><TD ALIGN="LEFT" port="p10"> 10 DISABLE INPUT (E-STOP)</TD></TR> 
+                                        <TR><TD ALIGN="LEFT" port="p11"> 11 SUPPLY +18-50VDC</TD></TR> 
+                                        <TR><TD ALIGN="LEFT" port="p12"> 12 POWER SUPPLY GND</TD></TR> 
+                                    </TABLE>
+                    >]
+                }
             }
-
-            subgraph cluster_terminals{
-                label="G540 screw terminals"
-                terminals [shape="box" label=<
-                                <TABLE CELLBORDER="0" BORDER="0">
-                                    <TR><TD ALIGN="LEFT" port="p1"> 1 INPUT 1 (DB25 PIN 10)</TD></TR> 
-                                    <TR><TD ALIGN="LEFT" port="p2"> 2 INPUT 2 (DB25 PIN 11)</TD></TR> 
-                                    <TR><TD ALIGN="LEFT" port="p3"> 3 INPUT 3 (DB25 PIN 12)</TD></TR> 
-                                    <TR><TD ALIGN="LEFT" port="p4"> 4 INPUT 4 (DB25 PIN 13)</TD></TR> 
-                                    <TR><TD ALIGN="LEFT" port="p5"> 5 OUTPUT 1 (DB25 PIN 17)</TD></TR> 
-                                    <TR><TD ALIGN="LEFT" port="p6"> 6 OUTPUT 2 (DB25 PIN 1)</TD></TR> 
-                                    <TR><TD ALIGN="LEFT" port="p7"> 7 VFD GROUND</TD></TR> 
-                                    <TR><TD ALIGN="LEFT" port="p8"> 8 VFD OUTPUT</TD></TR> 
-                                    <TR><TD ALIGN="LEFT" port="p9"> 9 VFD +5VDC</TD></TR> 
-                                    <TR><TD ALIGN="LEFT" port="p10"> 10 DISABLE INPUT (E-STOP)</TD></TR> 
-                                    <TR><TD ALIGN="LEFT" port="p11"> 11 SUPPLY +18-50VDC</TD></TR> 
-                                    <TR><TD ALIGN="LEFT" port="p12"> 12 POWER SUPPLY GND</TD></TR> 
-                                </TABLE>
-                >]
-            }
-
+            
             subgraph cluster_vfd{
                 label="CommanderSK"
                 subgraph v {
@@ -87,6 +89,42 @@
                 }
             }
 
+            subgraph relay_module {
+                label="4 ch relay"
+                cluster = true;
+
+                r0 [label="GND" shape=box];
+                r1 [label="VCC(5V)" shape=box];
+                
+                subgraph i {
+                    label="inputs";
+                    cluster=false;
+                    relay_in [shape="box" label=<
+                        <TABLE CELLBORDER="0" BORDER="0">
+                            <TR><TD ALIGN="LEFT" port="IN1"> IN1</TD></TR> 
+                            <TR><TD ALIGN="LEFT" port="IN2"> IN2</TD></TR> 
+                            <TR><TD ALIGN="LEFT" port="IN3"> IN3</TD></TR> 
+                            <TR><TD ALIGN="LEFT" port="IN4"> IN4</TD></TR> 
+                        </TABLE>
+                    >]
+                }
+                subgraph o {
+                    label="outputs";
+                    cluster=false;
+                    relay_out [shape="box" label=<
+                        <TABLE CELLBORDER="0" BORDER="0">
+                            <TR><TD ALIGN="LEFT" port="K1sig"> K1 signal  </TD></TR> 
+                            <TR><TD ALIGN="LEFT" port="K1no" > K1 NO      </TD></TR> 
+                            <TR><TD ALIGN="LEFT" port="K2sig"> K2 signal  </TD></TR> 
+                            <TR><TD ALIGN="LEFT" port="K2no" > K2 NO      </TD></TR> 
+                            <TR><TD ALIGN="LEFT" port="K3sig"> K3 signal  </TD></TR> 
+                            <TR><TD ALIGN="LEFT" port="K3no" > K3 NO      </TD></TR> 
+                            <TR><TD ALIGN="LEFT" port="K4sig"> K4 signal  </TD></TR> 
+                            <TR><TD ALIGN="LEFT" port="K4no" > K4 NO      </TD></TR> 
+                        </TABLE>
+                    >]
+                }
+            }
 
             n01 [shape="rarrow" label="spindle-enable"];
             n02 [shape="rarrow" label="spindle-cw"];
@@ -98,21 +136,31 @@
             n06 [shape="larrow" label="VFD-fault"];
 
 
-            DB25:o14 -> terminals:p8;
+            DB25:o14        -> terminals:p8;
             terminals:p7    -> VFD_T:T1 [dir=back];
             terminals:p8    -> VFD_T:T2 ;
-            terminals:p9    -> VFD_T:T3 ;
+            terminals:p9    -> VFD_T:T3 [dir=back];
             
             VFD_T:T5 ->   n06
             VFD_T:T6:e -> VFD_T:T1:e [dir=both]
-
-
-            n01 -> VFD_B:B4 [label="spindle-enable"];
-            n02 -> VFD_B:B5  [label="spindle-cw"];
-            n03 -> VFD_B:B6 [label="spindle-ccw"];
             
+            VFD_B:B2            -> relay_out:K1sig;
+            relay_out:K1sig     -> relay_out:K2sig
+            relay_out:K2sig     -> relay_out:K3sig
+
+
+            n01 -> relay_in:IN1 [label="enable"];
+            n02 -> relay_in:IN2 [label="cw"];
+            n03 -> relay_in:IN3 [label="ccw"];
+            VFD_B:B3-> relay_in:IN4 [label="at-speed"]
+            
+            relay_out:K1no -> VFD_B:B4 [label="enable"];
+            relay_out:K2no -> VFD_B:B5  [label="cw"];
+            relay_out:K3no -> VFD_B:B6 [label="ccw"];
+            relay_out:K4no -> n05 [label="at-speed"];
+
             n04 -> DB25:o14 [label="spindle-pwm"];
-            VFD_B:B3 -> n05 [label="at-speed"];
+            
             
             {rank=source n01 n02 n03 n04 n05 n06};
        }
